--- a/css/formcolor.css
+++ b/css/formcolor.css
@@ -19,3 +19,38 @@
   color: #ffffff;
   background: #e64646;
 }
+.sf-container {
+  background: rgba(0, 0, 0, 0);
+  margin-top: 10px;
+  margin-bottom: 100px;
+}
+
+
+/*---------------------------------------
+   FEATURE LIST 1
+-----------------------------------------*/
+.feature-list-1 {
+	margin-top: 40px;
+	margin-bottom: 20px;
+}
+
+.feature-list-1 li {
+	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+.feature-list-1 li .icon-container {
+	width: 32px;
+	height: 32px;
+	border-radius: 3px;
+	color: #ffffff;
+	line-height: 32px;
+	margin-right: 15px;
+	margin-top: 8px;
+}
+
+.feature-list-1 li p {
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 18px;
+	line-height: 30px;
+}
