--- a/css/responsive.css
+++ b/css/responsive.css
@@ -44,9 +44,6 @@ RESPONSIVE FIXES
          margin-top: 10px;
         
      }
-     .intro {
-         text-align: left !important
-     }
      
      .intro-section {
          margin-bottom: 50px;
@@ -90,6 +87,11 @@ RESPONSIVE FIXES
 		font-size: 80%;
 	}
 
+	header,
+	.cta-section {
+		background-attachment: scroll !important;
+	}
+
 	.navigation-header {
 		padding-top: 25px;
 		padding-bottom: 10px;
@@ -101,6 +103,17 @@ RESPONSIVE FIXES
 
 	.intro {
 		text-align: center !important;
+	}
+	
+	.sf-container {
+	    margin-top: -20px;
+	    margin-bottom: 20px;
+	    padding: 10px;
+	}
+	
+	.intro-section .sub-heading {
+	    font-size: 15px;
+	    line-height: 25px;
 	}
 
 	.section1,
